# DDS

./: .clang-format  .gitignore  BuildSetup.cmake  CHANGELOG.md  CMakeLists.txt  README.md  ReleaseNotes.md  codemeta.json  dds.h  doxyfile.in  master.cfg  run_test.sh  run_test.sh.in  version
MiscCommon/: BOOSTHelper.h  BOOST_FILESYSTEM.h  BuildConstants.h.in  CIString.h  CMakeLists.txt  CRC.h  ConditionEvent.h  CustomIterator.h  DDSEnvProp.h  DDSHelper.h  DDSUserDefaultsOptions.h  Doxyfile.in  Environment.h  ErrorCode.h  FindCfgFile.h  HexView.h  INet.h  IXMLPersist.h  Log.h  LogImp.h  Logger.h  MiscCli.h  MiscSetup.h  MiscUtils.h  MonitoringThread.h  PoDUserDefaultsOptions.h  Process.h  ProgressDisplay.h  Res.h  SessionIDFile.h  SysHelper.h  TimeMeasure.h  TimeoutGuard.h  Version.h.in  XMLHelper.h  dds_env_prop.h  def.h  stlx.h
MiscCommon/SSHTunnel/: CMakeLists.txt  SSHTunnel.cpp  SSHTunnel.h  ssh-tunnel
MiscCommon/dds_ncf/: CMakeLists.txt
MiscCommon/dds_sys_files/: CMakeLists.txt  DDSSysFiles.cpp  DDSSysFiles.h
MiscCommon/pipe_log_engine/: CMakeLists.txt  logEngine.cpp  logEngine.h
MiscCommon/tests/: CMakeLists.txt  Test_FindCfgFile.cpp  Test_MiscCli.cpp  Test_MiscUtils.cpp  Test_Process.cpp  Test_ProcessExecutable.cpp  Test_SysHelper.cpp  Test_XMLHelper.cpp  Test_wordexp.cpp
dds-agent/: CMakeLists.txt  README.md  main.cpp
dds-agent-cmd/: CMakeLists.txt  README.md
dds-agent-cmd/src/: GenericChannel.cpp  GenericChannel.h  GetLogChannel.cpp  Options.h  main.cpp
dds-agent/src/: AgentClient.cpp  AgentClient.h  AgentConnectionManager.cpp  AgentConnectionManager.h  CommanderChannel.cpp  CommanderChannel.h  MonitoringThread.cpp  MonitoringThread.h  Options.h  SMCommanderChannel.cpp  SMCommanderChannel.h  SMFWChannel.cpp  SMFWChannel.h  SMIntercomChannel.cpp  SMIntercomChannel.h  SMLeaderChannel.cpp  SMLeaderChannel.h  SMUIChannel.cpp  SMUIChannel.h  TalkToCommander.cpp  TalkToCommander.h  UIChannel.cpp  UIChannel.h  UIConnectionManager.cpp  UIConnectionManager.h  main.cpp  version.h.in
dds-commander/: CMakeLists.txt  README.md
dds-commander/src/: AgentChannel.cpp  AgentChannel.h  ChannelId.cpp  ChannelId.h  CommanderServer.cpp  CommanderServer.h  ConnectionManager.cpp  ConnectionManager.h  ConnectionManagerImpl.cpp  ConnectionManagerImpl.h  GetLogChannel.cpp  GetLogChannel.h  InfoChannel.cpp  InfoChannel.h  KeyValueManager.cpp  KeyValueManager.h  Options.h  SSHScheduler.cpp  SSHScheduler.h  Scheduler.cpp  Scheduler.h  SendCommandToItself.cpp  SendCommandToItself.h  SubmitChannel.cpp  SubmitChannel.h  TalkToAgent.cpp  TalkToAgent.h  TestChannel.cpp  TestChannel.h  TestConnectionManager.cpp  TestConnectionManager.h  UIChannelInfo.cpp  UIChannelInfo.h  main.cpp  version.h.in
dds-commander/tests/: CMakeLists.txt  TestKeyValueManager.cpp  TestScheduler.cpp  key_value_manager_test_1.xml  key_value_manager_test_result_1.txt  topology_scheduler_test_1.xml  topology_scheduler_test_2.xml  topology_scheduler_test_3.xml
dds-custom-cmd/: CMakeLists.txt
dds-custom-cmd-lib/: CMakeLists.txt
dds-custom-cmd-lib/src/: AgentChannel.cpp  AgentChannel.h  AgentConnectionManager.cpp  AgentConnectionManager.h  CustomCmd.cpp  CustomCmd.h  CustomCmdGuard.cpp  CustomCmdGuard.h
dds-custom-cmd/src/: Options.h  main.cpp  version.h.in
dds-daemonize/: CMakeLists.txt
dds-daemonize/src/: main.cpp
dds-daemonize/tests/: CMakeLists.txt
dds-getlog/: CMakeLists.txt
dds-getlog/src/: GetLogChannel.cpp  GetLogChannel.h  Options.h  main.cpp
dds-info/: CMakeLists.txt  README.md
dds-info/src/: InfoChannel.cpp  InfoChannel.h  Options.h  main.cpp  version.h.in
dds-info/tests/: CMakeLists.txt
dds-intercom-lib/: CMakeLists.txt  README.md
dds-intercom-lib/src/: AgentChannel.cpp  AgentChannel.h  AgentConnectionManager.cpp  AgentConnectionManager.h  DDSIntercomGuard.cpp  DDSIntercomGuard.h  Intercom.cpp  Intercom.h  IntercomErrorCodes.h  IntercomServiceCore.cpp  IntercomServiceCore.h  SMAgentChannel.cpp  SMAgentChannel.h  dds_intercom.cpp  dds_intercom.h  dds_intercom_error_codes.h  dds_rms_plugin_protocol.cpp
dds-intercom-lib/tests/: CMakeLists.txt  Test.cpp  Test_KeyValue.cpp  task-async_test_key_value.cpp  task-test_custom_cmd.cpp  task-test_key_value.cpp  topo_test_key-value-1.xml
dds-key-value-lib/: CMakeLists.txt
dds-key-value-lib/src/: AgentChannel.cpp  AgentChannel.h  AgentConnectionManager.cpp  AgentConnectionManager.h  KeyValue.cpp  KeyValue.h  KeyValueGuard.cpp  KeyValueGuard.h
dds-key-value-lib/tests/: CMakeLists.txt  task-async_test_key_value.cpp  task-test_key_value.cpp  topo_test_key-value-2.xml
dds-misc-lib/: CMakeLists.txt
dds-misc-lib/src/: BoostHelper.h  CRC.h  ConditionEvent.h  CustomIterator.h  DDSHelper.h  EnvProp.h  Environment.h  ErrorCode.h  FindCfgFile.h  HexView.h  INet.h  Logger.h  MiscCli.h  MiscSetup.h  MiscUtils.h  MonitoringThread.h  Process.h  ProgressDisplay.h  Res.h  SSHConfigFile.cpp  SSHConfigFile.h  SessionIDFile.h  SysHelper.h  TimeMeasure.h  Version.h.in  def.h  ncf.cpp  ncf.h  stlx.h
dds-misc-lib/tests/: CMakeLists.txt  Test_FindCfgFile.cpp  Test_Logger.cpp  Test_MiscCli.cpp  Test_MiscUtils.cpp  Test_Ncf.cpp  Test_Process.cpp  Test_ProcessExecutable.cpp  Test_SysHelper.cpp
dds-octopus/: CMakeLists.txt  README.md
dds-octopus/dds-octopus-task/: CMakeLists.txt
dds-octopus/src/: OctopusProtocol.cpp  OctopusProtocol.h  OctopusTestImpl.cpp  OctopusTestImpl.h  Options.h  TestBigCustomCmd.cpp  TestBigCustomCmd.h  TestPing.cpp  (+5 more)
dds-pipe-log-engine-lib/: CMakeLists.txt
dds-protocol-lib/: CMakeLists.txt  Protocol.cpp  Protocol.h  ProtocolCommands.h  README.md
dds-session/: CMakeLists.txt  README.md
dds-ssh/: CMakeLists.txt  Doxyfile.in
dds-stat/: CMakeLists.txt
dds-test/: CMakeLists.txt  README.md
dds-tools-lib/: CMakeLists.txt  README.md
dds-topology/: CMakeLists.txt  README.md
dds-topology-lib/: CMakeLists.txt  README.md
dds-tutorials/: CMakeLists.txt
dds-user-defaults/: CMakeLists.txt  README.md
proto/: CMakeLists.txt  submit_info.proto  submit_info_slurm.proto
test-project/: CMakeLists.txt  run_test_project.sh
(+383 files in other folders)
